--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ stages:
           inputs:
             appName: SimplySocial
             appType: webAppLinux
-            azureSubscription: '$(PrimarySubscription)'
+            azureSubscription: '$(AzureSubscription)'
             package: '$(Pipeline.Workspace)/SimplySocialApp/*.zip'
         
 
