Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,6 +99,9 @@ stages:
       pool:
         vmImage: 'windows-latest'
 
+      variables:
+      - group: KeyVault
+
       steps:
         - task: DownloadPipelineArtifact@2
           displayName: 'Download SQL Script'
