Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ stages:
           zipAfterPublish: true
           publishWebProjects: false
           projects: '$(BuildProject)'
-          arguments: '--output $(Build.ArtifactStagingDirectory) --no-restore'
+          arguments: '--output $(Build.ArtifactStagingDirectory)'
 
       - task: PublishPipelineArtifact@1
         displayName: 'Publish Build Artifact'
