--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -13,12 +13,12 @@
       "SimplySocial.App": {
         "Profile": "IdentityServerSPA"
       }
-    },
-    "Key": {
-      "Type": "Store",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser",
-      "Name": "CN={Specified in App Service Configuration}"
     }
+    //"Key": {
+    //  "Type": "Store",
+    //  "StoreName": "My",
+    //  "StoreLocation": "CurrentUser",
+    //  "Name": "CN={Specified in App Service Configuration}"
+    //}
   }
 }
