--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -14,5 +14,11 @@
         "Profile": "IdentityServerSPA"
       }
     }
+    //"Key": {
+    //  "Type": "Store",
+    //  "StoreName": "My",
+    //  "StoreLocation": "CurrentUser",
+    //  "Name": "CN={Specified in App Service Configuration}"
+    //}
   }
 }
