Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
         projects: $(BuildProject)
         arguments: --configuration $(BuildConfiguration) --no-restore
     
-    - script: npm run build-prod
+    - script: cd $(Build.SourcesDirectory) && npm run build-prod
 
   - job: Prepare_App
     dependsOn: Build
